# CLIF-pt-consult-order-tte

./: .gitignore  README.md  buddy-test-report.md  main.py  pyproject.toml  run_pipeline.sh
code/: 00_renv_restore.R  1_cohort.ipynb  1_cohort.py  2_data_gathering.ipynb  2_data_gathering.py  3_calculations.ipynb  3_calculations.py  4_ccw.R  4_ccw_MV_revised.R  4_table_one.R  5_ccw.R  99_initialize_renv.R  99_initialize_uv.sh  pthelperfunctions.py
config/: README.md  column_def.csv  config.json  config_template.json
