[project]
name = "pt-consults"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clifpy==0.3.8",
    "comorbidipy==0.5.0",
    "duckdb==1.4.4",
    "ipykernel>=7.3.0",
    "matplotlib==3.10.8",
    "numpy==2.4.2",
    "openpyxl>=3.1.5",
    "pandas==2.3.3",
    "pyarrow==21.0.0",
]
